Update openAPI file
